Fixed two missing language strings. Made new package files

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -681,6 +681,8 @@ JBS_MDL_USE_LIST_HEADER="Use List Header"
 JBS_MDL_USE_LIST_HEADER_DESC="Use the header from the default listing"
 
 ;; MED Media File Info and selections
+JBD_ADDON_LEGACY_FILE_LINKER="Link to File/Item"
+JBS_ADDON_LEGACY_MEDIA_FILES="Media File"
 JBS_ADDON_LEGACY_DETAILS="Server Details"
 JBS_ADDON_LEGACY_FILE_SETTINGS="File Settings"
 JBS_ADDON_LEGACY_MEDIA_TYPE="Default Media Settings"
