Cleand up options and new language string.

--- a/com_biblestudy/admin/addons/servers/youtube/language/en-GB/en-GB.jbs_addon_youtube.ini
+++ b/com_biblestudy/admin/addons/servers/youtube/language/en-GB/en-GB.jbs_addon_youtube.ini
@@ -5,3 +5,5 @@ JBS_ADDON_YOUTUBE_MEDIA_FILES="Media Files"
 JBS_ADDON_YOUTUBE_UPLOAD="Upload"
 JBS_ADDON_YOUTUBE_MEDIA_TYPE="Media Type"
 JBS_ADDON_YOUTUBE_PARAMETERS="Parameters"
+JBS_ADDON_YOUTUBE_URL="Url of Youtube Video"
+JBS_ADDON_YOUTUBE_URL_DISC="Use the Youtube URL from the share sectoin or the url in the browser"
