converting sql to php install scrips.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -622,6 +622,23 @@ JBS_INS_WARNING_INSTALL="You have tryed to access a page that is not permitted"
 JBS_INS_XML_DESCRIPTION="Joomla Bible Study"
 JBS_INS__MSG_DATABASE_UPDATEVERSION_ERROR="Database update version (%s) does not match Joomla! Bible Study version (%s)."
 
+COM_BIBLESTUDY_INSTALLER="Installer"
+COM_BIBLESTUDY_INSTALL_PREPARING="Preparing"
+COM_BIBLESTUDY_INSTALL_PLEASE_WAIT="Please Wait"
+COM_BIBLESTUDY_INSTALL_ERROR_MESSAGE="Installer Error Message"
+COM_BIBLESTUDY_INSTALL_ERROR_DETAILS="Install Error Details"
+COM_BIBLESTUDY_INSTALL_DB_UPGRADE_FAILED_XML="Install DB Upgrade Filed XML"
+COM_BIBLESTUDY_INSTALL_STEP_PREPARE="Prepare"
+COM_BIBLESTUDY_INSTALL_PLUGIN_STATUS="Plugin Status"
+COM_BIBLESTUDY_INSTALL_CREATE="Create Table"
+COM_BIBLESTUDY_INSTALL_DETAILS="Details"
+COM_BIBLESTUDY_INSTALL_TO_JBSM="Go to BibleStudy"
+COM_BIBLESTUDY_INSTALL_CLOSE="Close"
+COM_BIBLESTUDY_INSTALL_SUCCESS_MESSAGE="Success Message"
+COM_BIBLESTUDY_CONTROLLER_INSTALL_INSTALLATION_COMPLETE="Install Installation Complete"
+COM_BIBLESTUDY_INSTALL_SUCCESS="Install Success"
+
+
 ; Preflight and postflight strings   ; duplicate? see IBM
 JBS_INS_CLICK_TO_FINISH="Click Here To Finish"
 JBS_INS_ERROR_SQL_READBUFFER="Could not read the sql file"
