Fixed language string post install

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -603,7 +603,7 @@ JBS_IBM_PI_SERVERS="Servers converted: "
 JBS_IBM_PI_STUDIES="Studies converted: "
 JBS_IBM_PI_TEACHERS="Teachers converted: "
 JBS_IBM_PREACHIT_RESULTS="PreachIt Conversion Results"
-JBS_IBM_REVIEW_ADMIN_TEMPLATE="Please review Admin and Template settings, as some setting may not be taken over."
+JBS_IBM_REVIEW_ADMIN_TEMPLATE="Please review Admin and Template settings. View settings are set differently in this version of JBS."
 JBS_IBM_SAVE_DB="Save your JBS database to /media/com_biblestudy/backup"
 JBS_IBM_SELECT_DB="Select a database file to restore"
 JBS_IBM_SERIES_CONVERTED="Series converted"
