--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -1696,7 +1696,7 @@ JBS_TPL_USE_RECORD_SETTING="Use Record Setting"
 JBS_TPL_USE_SERIES_LIMIT="Type of Series List"
 JBS_TPL_USE_TEACHERS_LIMIT="Type of Teachers List"
 JBS_TPL_VERSES_CUSTOM_DATE_FORMAT="Set Custom PHP String To Time"
-JBS_TPL_VERSES_CUSTOM_DATE_FORMAT_DESC="Use standard PHP date() code to form date. Overrides setting above."
+JBS_TPL_VERSES_CUSTOM_DATE_FORMAT_DESC="Use standard PHP date() code to form date. Overrides setting above. http://php.net/manual/en/function.date.php"
 JBS_TPL_VERSES_DATES_CSS="Verses, Dates, CSS"
 JBS_TPL_VERSES_DATE_FORMAT="Date format"
 JBS_TPL_VERSES_DATE_FORMAT_DESC="Set the date display format"
