Update some Language codes.

--- a/com_biblestudy/admin/language/de-DE/de-DE.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/de-DE/de-DE.com_biblestudy.ini
@@ -256,7 +256,7 @@ JBS_CMN_YES="Ja"
 
 ;; ADM Administrator
 JBS_ADM_ADDTHIS_SHARE="AddThis.com"
-JBS_ADM_ADMIN_CPANL="Database Functions"   ; translate
+JBS_ADM_ADMIN_CPANL="Administrations Bearbeiten"
 JBS_ADM_ADMIN_PARAMS="Administrations Einstellungen"
 JBS_ADM_ADMIN_PERMISSIONS="Zugriffskontrolle"
 JBS_ADM_AFFECTED_ROWS="Veränderte Einträge"
