--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -261,7 +261,7 @@ JBS_CMN_YES="Yes"
 
 ;; ADM Administrator
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
-JBS_ADM_ADMIN_CPANL="Database Functions"
+JBS_ADM_ADMIN_CPANL="Administrations Tools"
 JBS_ADM_ADMIN_PARAMS="Administrative Parameters"
 JBS_ADM_ADMIN_PERMISSIONS="Access Control"
 JBS_ADM_AFFECTED_ROWS="Affected Rows"
