#126 #159 added a manuel archive function.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -256,6 +256,8 @@ JBS_CMN_VIEWS="Views"
 JBS_CMN_VIRTUEMART_NOT_INSTALLED="VirtueMart not installed"
 JBS_CMN_WARN_INSTALL_UPLOAD_ERROR="Upload Error"
 JBS_CMN_YEARS="Years"
+JBS_CMN_MONTHS="Months"
+JBS_CMN_DAYS="Days"
 JBS_CMN_YEARS_ORDERING="Years Ordering"
 JBS_CMN_YES="Yes"
 
@@ -413,6 +415,15 @@ JBS_ADM_THUMBNAIL_STUDY_SIZE_DESC="Size of the thumbnail for study"
 JBS_ADM_THUMBNAIL_TEACHER_SIZE="Teacher thumbnail size (px):"
 JBS_ADM_THUMBNAIL_TEACHER_SIZE_DESC="Size of the thumbnail for teachers"
 JBS_ADM_ARULESROWS="Rules Not Set"
+
+;; Archive
+JBS_ADM_ARCHIVE="Archive"
+JBS_CMN_ARCHIVE="Archive Studies &amp; Media Files"
+JBS_ARCHIVE_DB_CHANGE="We have archive %s Studies and %s Media Files with records older then %s."
+JBS_ARCHIVE_TIMEFRAME_LABEL="How far back should we archive."
+JBS_ARCHIVE_TIMEFRAME_DESC="From today's date, estemate how fare back you wish to archive. Example if you set 5 years any record back 5 years or older will be arechived"
+JBS_ARCHIVE_SWICH_LABEL="How far back should we archive."
+JBS_ARCHIVE_SWICH_DESC= "From today's date, estemate how fare back you wish to archive. Example if you set 5 years any record back 5 years or older will be arechived"
 
 ;; BAT Batch process
 JBS_BAT_DOWNLOAD_NOCHANGE="- No Download Change -"
