Changed icons on Administrative screen, adjusted css on cpanel icons, commented out Sermon Speaker and PreachIT conversion as not available in this version.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -379,14 +379,15 @@ JBS_ADM_OPTION_WHITE_LIST="White List"
 JBS_ADM_PARENT_WINDOW="Parent Window"
 JBS_ADM_PERMISSIONS="Permissions/Filters"
 JBS_ADM_PERMISSION_SETTINGS="Permissions Settings"
-JBS_ADM_PLAYER_ADMIN_DESC="JW Palyer Global settings"
+JBS_ADM_PLAYER_ADMIN_DESC="JW Player Global settings"
 JBS_ADM_PLAYER_ADMIN_LABLE="JW Player Global settings"
+CONVERSION_NOT_AVAILABLE_IN_900="Conversion tools not available in JBS Version 9.0.0 or 9.0.1"
 JBS_ADM_PLAYER_SETTINGS="System Player Tools"
 JBS_ADM_PLAYS_DOWNLOAD="Plays + Downloads"
 JBS_ADM_POPULAR_LIMIT="Limit number of popular study links"
 JBS_ADM_POPULAR_LIMIT_DESC="Set a limit for the number of popular studies to show on the drop down in the studieslist page. Set to show in template"
 JBS_ADM_POPUP_OPTIONS="Pop Up Options"
-JBS_ADM_RESET_ALIAS="Click here to create alias entries for all rows without an alias"
+JBS_ADM_RESET_ALIAS="Alias Entries"
 JBS_ADM_RESET_ALL_DOWNLOAD_HITS="Reset All Download Hits"
 JBS_ADM_RESET_ALL_HITS="Reset All Hits"
 JBS_ADM_RESET_ALL_PLAYS="Reset All Plays"
@@ -423,7 +424,7 @@ JBS_ARCHIVE_DB_CHANGE="We have archive %s Studies and %s Media Files with record
 JBS_ARCHIVE_TIMEFRAME_LABEL="How far back should we archive."
 JBS_ARCHIVE_TIMEFRAME_DESC="From today's date, estemate how fare back you wish to archive. Example if you set 5 years any record back 5 years or older will be arechived"
 JBS_ARCHIVE_SWICH_LABEL="How far back should we archive."
-JBS_ARCHIVE_SWICH_DESC= "From today's date, estemate how fare back you wish to archive. Example if you set 5 years any record back 5 years or older will be arechived"
+JBS_ARCHIVE_SWICH_DESC= "From today's date, estemate how far back you wish to archive. Example if you set 5 years any record back 5 years or older will be archived"
 
 ;; BAT Batch process
 JBS_BAT_DOWNLOAD_NOCHANGE="- No Download Change -"
