Added some language keys for search plugin

--- a/plg_biblestudy_search/language/en-GB/en-GB.plg_search_biblestudysearch.sys.ini
+++ b/plg_biblestudy_search/language/en-GB/en-GB.plg_search_biblestudysearch.sys.ini
@@ -6,3 +6,4 @@
 
 JBS_PLG_SEARCH="Search - Bible Study"
 JBS_PLG_SEARCH_XML_DESCRIPTION="Enables searching of Joomla Bible Study Component"
+PLG_SEARCH_BIBLESTUDYSEARCH_BIBLESTUDYSEARCH="Bible Studies"
