Fixing some language issues and removing unused links

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -1510,8 +1510,8 @@ JBS_TPL_MEDIA_PROTOCOL="Web protocol"
 JBS_TPL_MEDIA_PROTOCOL_DESC="http:// assumed. Type in a different protocol to override such as ftp:// sftp:// https://. Will prepend each media file path"
 JBS_TPL_MEDIA_SCREENCOLOR="Screen Color"
 JBS_TPL_MEDIA_SCREENCOLOR_DESC="Use HEX something like 0x000000"
-JBS_TPL_MEDIA_SHOW_FILESIZE="Media Label"
-JBS_TPL_MEDIA_SHOW_FILESIZE_DESC="Choose a label for under the media file"
+JBS_TPL_MEDIA_SHOW_FILESIZE="Media Label/Filesize"
+JBS_TPL_MEDIA_SHOW_FILESIZE_DESC="Choose a label for the media file"
 JBS_TPL_MESSAGETYPE_BRACE="Messagetype {message_type}"
 JBS_TPL_NO_APPROVAL="No Approval needed"
 JBS_TPL_NO_CAPTCHA="No Captcha"
