Fixes #649 #650 This will make fixAssets work properly and work with new installer.
Cleaned up some code also.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -627,6 +627,12 @@ JBS_IBM_SHOW_JBSMIGRATION_LABEL="Show Migration Tab"
 JBS_IBM_SHOW_JBSMIGRATION_LABEL_DESC="Choose whether or not to show the tab that allows you to migrate from Joomla 1.5 versions of Joomla Bible Study. This should only need to be shown once"
 JBS_IBM_TEACHERS_CREATED="Teachers converted"
 JBS_IBM_VERSION_TOO_OLD="You must upgrade to at least JBS version 6.0.8 to migrate. Please contact customer service at www.joomlabiblestudy.org"
+JBS_LBL_REDIRECT_IN_3S="Will Redirect in 3s"
+
+;; Assets
+JBS_FIXASSETS_WORKING="Fix Assets Working"
+JBS_FIXASSETS_DONE="Fix Assets Done"
+JBS_LBL_AUTOCLOSE_IN_3S="Window will close in 3s"
 
 ;; INS Install -> also see xx-XX.com_biblestudy.sys.ini
 ; Install strings   ; duplicate? see IBM
