Added some language strings that were missing

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -901,6 +901,7 @@ JBS_PDC_XML_FILES_ERROR="There were errors in publishing your podcasts. Please c
 JBS_PDC_XML_FILES_WRITTEN="Podcast successfully published"
 
 ;; PLG Plugin specific strings (all plugins)
+PLG_JBSBACKUP_HEADER="Your site's Joomla Bible Study database backup"
 JBS_PLG_BACKUP_EMAIL_MSG_ERROR="Errors in backup process"
 JBS_PLG_BACKUP_EMAIL_MSG_SUCCESS="Backup was successful"
 JBS_PLG_BACKUP_FILES="Number of backup files to keep"
