--- a/plg_biblestudy_backup/language/en-GB/en-GB.plg_system_jbsbackup.sys.ini
+++ b/plg_biblestudy_backup/language/en-GB/en-GB.plg_system_jbsbackup.sys.ini
@@ -3,7 +3,7 @@
 ; Copyright (C) 2007 - 2015 Joomla Bible Study. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
-
+PLG_JBSBACKUP_HEADER="This email contains a backup of your Joomla Bible Study database"
 JBS_PLG_BACKUP="System - Bible Study Backup"
 JBS_PLG_BACKUP_XML_DESCRIPTION="Enables backup of Joomla Bible Study Component"
 
