Joomla-Bible-Study-675 Add links to rss file on the Podcast list page.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -899,6 +899,8 @@ JBS_PDC_WEBSITE_URL="Website url (NO http://)"
 JBS_PDC_WRITE_XML_FILES="Write XML Files"
 JBS_PDC_XML_FILES_ERROR="There were errors in publishing your podcasts. Please check the site file(s)."
 JBS_PDC_XML_FILES_WRITTEN="Podcast successfully published"
+JBS_PDC_XML_TTITLE="XML File"
+JBS_PDC_XML="XML"
 
 ;; PLG Plugin specific strings (all plugins)
 JBS_PLG_BACKUP_EMAIL_MSG_ERROR="Errors in backup process"
