--- a/com_biblestudy/admin/language/de-DE/de-DE.com_biblestudy.sys.ini
+++ b/com_biblestudy/admin/language/de-DE/de-DE.com_biblestudy.sys.ini
@@ -13,7 +13,7 @@ JBS_CMN_COM_BIBLESTUDY="Bibelstudien"
 ; Install strings
 JBS_INS_ERROR_SQL_READBUFFER="SQL Dateien können nicht gelesen werden"
 JBS_INS_XML_DESCRIPTION="Bibelstudien"
-JBS_INS_INSTALLATION_RESULTS="Bibelstudien Ergebnisse"
+JBS_INS_INSTALLATION_RESULTS="Bibelstudien Ergebnisse - %s"
 JBS_INS_FAILURE="Datenbasis konnte nicht erstellt werden"
 
 ; Preflight and postflight strings
