--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -637,7 +637,7 @@ JBS_LBL_AUTOCLOSE_IN_3S="Window will close in 3s"
 ;; INS Install -> also see xx-XX.com_biblestudy.sys.ini
 ; Install strings   ; duplicate? see IBM
 JBS_INS_DATABASE_SCHEMA_DOES_NOT_MATCH="Database schema (%s) does not match current version (%s)"
-JBS_INS_INSTALLATION_RESULTS="Joomla BibleStudy Results"
+JBS_INS_INSTALLATION_RESULTS="Joomla BibleStudy Results - %s"
 JBS_INS_WARNING_INSTALL="You have tryed to access a page that is not permitted"
 JBS_INS_XML_DESCRIPTION="Joomla Bible Study"
 JBS_INS__MSG_DATABASE_UPDATEVERSION_ERROR="Database update version (%s) does not match Joomla! Bible Study version (%s)."
