Fixes sqeezebox pop out link. Fixed Pop out width problems and padding.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -261,6 +261,7 @@ JBS_CMN_MONTHS="Months"
 JBS_CMN_DAYS="Days"
 JBS_CMN_YEARS_ORDERING="Years Ordering"
 JBS_CMN_YES="Yes"
+JBS_CMN_POPOUT="Pop Out"
 
 ;; ADM Administrator
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
