Add option to remove PopOut form the squeezebox. And text button override.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -839,6 +839,10 @@ JBS_MED_USE_FILENAME_AS_PATH="Use file name as entire path if you wish. Just don
 JBS_MED_VIRTUEMART_ITEM="Select a VirtueMart item"
 JBS_MED_VIRTUEMART_ITEM_DESC="If installed, virtuemart items will appear in descending order by product id along with their SKU number. This will become the link from the media file to the store with that product id"
 JBS_MED_SAVE="Media Saved"
+JBS_MED_MEDIA_POPOUT_YES="Pop Out:"
+JBS_MED_MEDIA_POPOUT_YES_DESC="Should Pop Out show on Squeezebox."
+JBS_MED_MEDIA_POPOUT_TEXT="Pop Out Text:"
+JBS_MED_MEDIA_POPOUT_TEXT_DESC="Text to to use for button on overiding the default text."
 
 ;; MNU Menu --> moved to xx-XX.com_biblestudy.sys.ini
 
