New change player by searching medias MimeType or Extension.

--- a/com_biblestudy/admin/language/de-DE/de-DE.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/de-DE/de-DE.com_biblestudy.ini
@@ -112,7 +112,7 @@ JBS_CMN_ITEM_PUBLISHED="Freigegeben"
 JBS_CMN_JOOMLA_BIBLE_STUDY="Joomla Bibelstudien (Joomla Bible Study)"
 JBS_CMN_LANDING_SHOW="Zeige auf der Landing-Page"
 JBS_CMN_LANDING_SHOW_DESC="Soll dieser Eintrag auf der Landing-Page über oder unter dem 'WEITERE' Knopf angezeigt werden? Weitere Einstellungen im Template unter 'Landing-Page'"
-JBS_CMN_LEGACY_PLAYER="Audio Player aus Version 6.1"
+JBS_CMN_LEGACY_PLAYER="Internal Audio Player"
 JBS_CMN_LOCATION="Veranstaltungsort"
 JBS_CMN_LOCATIONS="Veranstaltungsorte"
 JBS_CMN_LOCATIONS_ORDERING="Sortierung der Veranstaltungsorte"
