--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -118,7 +118,7 @@ JBS_CMN_ITEM_PUBLISHED="Published"
 JBS_CMN_JOOMLA_BIBLE_STUDY="Joomla Bible Study"
 JBS_CMN_LANDING_SHOW="Show on Landing Page"
 JBS_CMN_LANDING_SHOW_DESC="Choose whether to hide this item on the Landing Page, or wether to show it above or below the "_QQ_"more"_QQ_" button. Must also set this under Templates/Landing Page"
-JBS_CMN_LEGACY_PLAYER="Legacy mp3 Player"
+JBS_CMN_LEGACY_PLAYER="Internal Audio Player"
 JBS_CMN_LOCATION="Location"
 JBS_CMN_LOCATIONS="Locations"
 JBS_CMN_LOCATIONS_ORDERING="Locations Ordering"
@@ -418,6 +418,8 @@ JBS_ADM_THUMBNAIL_STUDY_SIZE_DESC="Size of the thumbnail for study"
 JBS_ADM_THUMBNAIL_TEACHER_SIZE="Teacher thumbnail size (px):"
 JBS_ADM_THUMBNAIL_TEACHER_SIZE_DESC="Size of the thumbnail for teachers"
 JBS_ADM_ARULESROWS="Rules Not Set"
+JBS_ADM_MEDIATYPES_OPTIONS="Chaneg player by file type"
+JBS_ADM_MEDIATYPES_DESC="Select MimeType or Extension. Then select player that you wan't to use for them."
 
 ;; Archive
 JBS_ADM_ARCHIVE="Archive"
