Working code for Podcast List and Display.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -262,6 +262,7 @@ JBS_CMN_DAYS="Days"
 JBS_CMN_YEARS_ORDERING="Years Ordering"
 JBS_CMN_YES="Yes"
 JBS_CMN_POPOUT="Pop Out"
+JBS_CMN_PODCASTS_LIST="Podcasts"
 
 ;; ADM Administrator
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
