Added global show or hide download icon

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -38,6 +38,8 @@ JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
 ;; CMN Common phrases used in several sections
 ;JBS_COM_EDIT_ITEM="Edit Item"
 ;JBS_SELECT_LANGUAGE="Select Language"    ; replaced by JOPTION_SELECT_LANGUAGE
+JBS_SHOW_DOWNLOAD_BUTTON="Global Show Download"
+JBS_SHOW_DOWNLOAD_BUTTON_DESC="Set to yes if you want the download icon to show by default in media files. Individual media file record will override this setting"
 PLG_SEARCH_BIBLESTUDYSEARCH_BIBLESTUDYSEARCH="Bible Studies"
 JBS_CPANEL_DESC_WELCOME="Welcome to Joomla Bible Study"
 JBS_CMN_CENTER="Center"
