--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -264,6 +264,8 @@ JBS_CMN_DAYS="Days"
 JBS_CMN_YEARS_ORDERING="Years Ordering"
 JBS_CMN_YES="Yes"
 JBS_CMN_POPOUT="Pop Out"
+JBS_CMN_PODCASTS_LIST="Podcast List"
+JBS_CMN_NO_PODCASTS="No Podcasts"
 
 ;; ADM Administrator
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
