--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -264,6 +264,7 @@ JBS_CMN_DAYS="Days"
 JBS_CMN_YEARS_ORDERING="Years Ordering"
 JBS_CMN_YES="Yes"
 JBS_CMN_POPOUT="Pop Out"
+JBS_CMN_MEDIA_RESPONSIVE="Responsive"
 
 ;; ADM Administrator
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
@@ -422,6 +423,7 @@ JBS_ADM_THUMBNAIL_TEACHER_SIZE_DESC="Size of the thumbnail for teachers"
 JBS_ADM_ARULESROWS="Rules Not Set"
 JBS_ADM_MEDIATYPES_OPTIONS="Chaneg player by file type"
 JBS_ADM_MEDIATYPES_DESC="Select MimeType or Extension. Then select player that you wan't to use for them."
+JBS_ADM_JWPLAYER_RESPONSIVE_DESC="Responsive player like 16:9"
 
 ;; Archive
 JBS_ADM_ARCHIVE="Archive"
