Add seris show podcast view switch.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -427,6 +427,8 @@ JBS_ADM_MEDIATYPES_OPTIONS="Chaneg player by file type"
 JBS_ADM_MEDIATYPES_DESC="Select MimeType or Extension. Then select player that you wan't to use for them."
 JBS_ADM_JWPLAYER_RESPONSIVE_DESC="Responsive player like 16:9"
 JBS_ADM_DATABASE="DataBase Fix"
+JBS_ADM_SERIE_PC_SHOW="Podcast View Show"
+JBS_ADM_SERIE_PC_SHOW_DESC="Show this series in the podcast listing page. Only good if you plan on doing MP3's"
 
 ;; Archive
 JBS_ADM_ARCHIVE="Archive"
