Add in some language pack and now show description on page

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -267,6 +267,7 @@ JBS_CMN_POPOUT="Pop Out"
 JBS_CMN_PODCASTS_LIST="Podcast List"
 JBS_CMN_NO_PODCASTS="No Podcasts"
 JBS_CMN_MEDIA_RESPONSIVE="Responsive"
+JBS_CMN_LISTEN="Listen"
 
 ;; ADM Administrator
 JBS_ADM_ADDTHIS_SHARE="AddThis Sharing"
