Upgrade DB Fixer. now corrects #__bsms_update and wording is corrected in output of stats.

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -430,6 +430,10 @@ JBS_ADM_JWPLAYER_RESPONSIVE_DESC="Responsive player like 16:9"
 JBS_ADM_DATABASE="DataBase Fix"
 JBS_ADM_SERIE_PC_SHOW="Podcast View Show"
 JBS_ADM_SERIE_PC_SHOW_DESC="Show this series in the podcast listing page. Only good if you plan on doing MP3's"
+JBS_ADM_MSG_DATABASE_SCHEMA_ERROR="Database schema version (%s) does not match JBSM version (%s)."
+JBS_ADM_MSG_DATABASE_UPDATEVERSION_ERROR="Database update version (%s) does not match JBSM version (%s)."
+JBS_ADM_MSG_DATABASE_UPDATEJBSMVERSION_ERROR="Database update table version (%s) does not match JBSM version (%s)."
+JBS_ADM__MSG_DATABASE_UPDATE_VERSION="Update version (in #__bsms_update): %s"
 
 ;; Archive
 JBS_ADM_ARCHIVE="Archive"
@@ -453,6 +457,7 @@ JBS_BAT_SERIES_DESC="Choose a new series"
 JBS_BAT_SERIES_NOCHANGE="- Do Not Change Series -"
 JBS_BAT_TEACHER_DESC="Choose a teacher for the batch process"
 JBS_BAT_TEACHER_NOCHANGE="- Do Not Change Teacher -"
+
 
 ;; BBK Book of the Bibles Translations
 ;;; Old Testament
