Naming Problem with image

--- a/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
+++ b/com_biblestudy/admin/language/en-GB/en-GB.com_biblestudy.ini
@@ -1142,7 +1142,7 @@ JBS_TCH_SHOW_LIST="Show Teacher List"
 JBS_TCH_SHOW_LIST_VIEW="Show on List View"
 JBS_TCH_SHOW_LIST_VIEW_DESC="Show this Teacher in the Teacher List View"
 JBS_TCH_TEACHER_IMAGE="Teacher Thumbnail"
-JBS_TCH_TEACHER_IMAGE_LARGE = "Teacher Image"
+JBS_TCH_TEACHER_IMAGE_LARGE = "Teacher Image Large"
 JBS_TCH_TITLE_DESC="Title or salutation like Prof"
 JBS_TCH_TWITTER="Twitter Feed"
 JBS_TCH_TWITTER_DESC="Enter a full url link to the teacher's Twitter feed starting with http://"
